[package]
name = "data-structure-implementation-by-rust"
version = "0.1.0"
authors = ["Wison Ye <wisonye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
enable_debug_code_token_pairing = []

[dependencies]
serde = { version = "~1.0.143", features = ["derive"] }
serde_json = "~1.0.83"

[lib]
doctest = false
